Fix fade flicker by avoiding @keyframes and disallow quick double deletions from fast clicking

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -9,20 +9,6 @@ html, body {
   position: absolute;
 }
 
-.fadein {
-  animation: fadein 1s;
-}
-
-.fadeout {
-  animation: fadeout 1s;
-}
-
-@keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-@keyframes fadeout {
-  from { opacity: 1; }
-  to   { opacity: 0; }
+.fade {
+  transition: opacity 1s ease-in-out;
 }
